swen430as2/tests/valid/null/Null_Valid_2.while
null id(null x) {
  return x;
}

void main() {
    assert id(null) == null;
}