swen430as2/tests/invalid/null/Null_Invalid_2-TC01.while
null f(int x) {
    return x;
}